--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "dist/combo.css",
     "dist/frontend-css-web-main.css",
     "dist/mention.css",
-    "dist/product-menu.css",
+    "dist/product-menu.css"
   ],
   "moduleType": [
     "globals"
